--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
+
+TWILIO_ACCOUNT_SID=my-twilio-account-sid
+TWILIO_AUTH_TOKEN=my-twilio-auth-token
+TWILIO_NUMBER=my-twilio-number
+TWILIO_NOTIFICATION_SERVICE_SID=my-twilio-notification-service-sid
